--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nodemon": "^1.12.1",
     "qs": "^6.5.1",
     "querystring": "^0.2.0",
+    "ramda": "^0.25.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
