--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "mongodb": "^3.0.1",
     "nodemon": "^1.12.1",
     "qs": "^6.5.1",
     "querystring": "^0.2.0",
