--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "sequelize": "^4.28.6"
   }
 }
